--- a/public/login.html
+++ b/public/login.html
@@ -96,11 +96,14 @@
 
 <!-- ================= TO DO ================ -->
 <!-- MVP DUE SATURDAY 18TH
--SET GOALS 
--TWITTER API
+
+    -TWITTER API
+    
+
+-CHAT PAGE: 
 
 
--CHAT PAGE: FONT COLOR, SPACING, MENU SIZING, BORDERS,  NAV/FOOTER???
+ABOUT PAGE
 
 
 -stand up methedology / agile /sprint...retrospective .....LEARN THIS SHIT!!!-->
